# BattleZips-Halo2

./: .gitignore  Cargo.toml  README.md  err.txt  kzg.toml
.cargo/: config  config.toml
benches/: board.rs  shot.rs
dead_code/board/: board_chip.rs  board_circuit.rs  utils.rs
src/: lib.rs  main.rs  table.rs
src/bitify/: bitify.rs  mod.rs
src/bits2num/: bits2num.rs  mod.rs
src/board/: board_chip.rs  board_circuit.rs  board_table.rs  chip.rs  circuit.rs  gadget.rs  mod.rs  utils.rs
src/board/primitives/: placement.rs
src/chips/: bitify.rs  board.rs  mod.rs  pedersen.rs  placement.rs  shot.rs  transpose.rs
src/circuits/: board.rs  mod.rs  shot.rs
src/ex/: _main.rs  fib.rs
src/placement/: chip.rs  circuit.rs  gadget.rs  mod.rs  placement.rs  primitives.rs
src/poseidon/: chip.rs  circuit.rs
src/shot/: chip.rs  circuit.rs
src/transpose/: chip.rs  mod.rs
src/utils/: binary.rs  board.rs  constants.rs  deck.rs  mod.rs  pedersen.rs  poseidon_test.rs  ship.rs  shot.rs
src/utils/constants/: fixed_bases.rs
src/utils/constants/fixed_bases/: board_commit_r.rs  board_commit_v.rs
src/wasm/: circuit_wasm.rs  mod.rs
