[package]
name = "battlezips_v2"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_gadgets = { version = "0.2.0", features = ["test-dependencies"] }
halo2_proofs = "0.2.0"
rand_core = "0.6.3"
bitvec = "1.0.0"
criterion = "0.4.0"
rand = "0.8.5"

# [features]
# dev-graph = [
#     "halo2_proofs/dev-graph",
#     "plotters",
#     "plotters/bitmap_backend",
#     "plotters/bitmap_encoder",
# ]

[[bench]]
name = "shot"
path = "benches/shot.rs"
harness = false

[[bench]]
name = "board"
path = "benches/board.rs"
harness = false
