[package]
name = "battlezips_v2"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "battlezips_v2"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_gadgets = { version = "0.2.0", default-features = false }
halo2_proofs = "0.2.0"
plotters = { version = "0.3.4", optional = true }
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
bitvec = "1.0.0"
hex = "0.4.3"
criterion = {version="0.4.0", default-features = false }
rand = "0.8.5"
serde = { version="1.0.152", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.61"
getrandom = {version="0.2.8", features = ["js"]}
rayon = "1.5"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.84"
wasm-bindgen-rayon = { version = "1.0"}

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters", "plotters/bitmap_backend", "plotters/bitmap_encoder"]

[[bench]]
name = "shot"
path = "benches/shot.rs"
harness = false

[[bench]]
name = "board"
path = "benches/board.rs"
harness = false
