[package]
name = "battlezips_halo2"
version = "0.2.0"
edition = "2021"

[lib]
name = "battlezips_halo2"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_gadgets = "0.2.0"
halo2_proofs = "0.2.0"
rand_core = "0.6.3"
bitvec = "1.0.0"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.61"
getrandom = { version = "0.2.8", features = ["js"] }
rayon = "1.5"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-rayon = "1.0"

[dev-dependencies]
criterion = "0.4.0"
halo2_gadgets = { version = "0.2.0", features = ["test-dependencies"] }

# [features]
# dev-graph = [
#     "halo2_proofs/dev-graph",
#     "plotters",
#     "plotters/bitmap_backend",
#     "plotters/bitmap_encoder",
# ]

[[bench]]
name = "shot"
path = "benches/shot.rs"
harness = false

[[bench]]
name = "board"
path = "benches/board.rs"
harness = false

# [profile.dev]
# test = ["--target=wasm32-unknown-unknown"]

# [profile.test]
# target = "wasm32-unknown-unknown"
